--- a/includes/page-create.html
+++ b/includes/page-create.html
@@ -11,31 +11,31 @@
         <div class="col-6">
             <div class="palette">
                 <div class="grid">
-                    <div id="panel-a">
+                    <div class="panel-a">
                         <div class="caption">
                             <span class="label">panel a</span>
                             <span class="title">Serengeti</span>
                         </div>
                     </div>
-                    <div id="panel-b">
+                    <div class="panel-b">
                         <div class="caption">
                             <span class="label">panel b</span>
                             <span class="title">Sunset Brown</span>
                         </div>
                     </div>
-                    <div id="couch">
+                    <div class="couch">
                         <div class="caption">
                             <span class="label">couch</span>
                             <span class="title">Saddle</span>
                         </div>
                     </div>
-                    <div id="cabinet">
+                    <div class="cabinet">
                         <div class="caption">
                             <span class="label">cabinet interior</span>
                             <span class="title">Mahogany</span>
                         </div>
                     </div>
-                    <div id="headboard">
+                    <div class="headboard">
                         <div class="caption">
                             <span class="label">headboard</span>
                             <span class="title">Camel</span>
