--- a/includes/page-schemes.html
+++ b/includes/page-schemes.html
@@ -1,6 +1,10 @@
 <article class="schemes">
-    <h1>Color Schemes</h1>
     <div class="row">
+        <div class="col-12">
+            <h1>Color Schemes</h1>
+        </div>
+    </div>
+    <div class="row container">
         
     </div>
 </article>
