--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -237,44 +237,6 @@ body {
                 font-weight: normal;
                 margin: 0;
             }
-            .palette {
-                font-family: 'Roboto Condensed', sans-serif;
-                font-weight: 300;
-                padding-bottom: 110%; /* grid ratio */
-                position: relative;
-                width: 100%;
-                
-                .grid {
-                    background-color: #55504c;
-                    display: -ms-grid;
-                    display: grid;
-                    -ms-grid-columns: 2fr 1fr;
-                    -ms-grid-rows: 2fr 1fr 1fr;
-                    grid-template-columns: 2fr 1fr;
-                    grid-template-rows: 2fr 1fr 1fr;
-                    height: 100%;
-                    position: absolute;
-                    width: 100%;
-
-                    > div { position: relative; }
-
-                    #panel-a    { grid-column: 1 / 2; grid-row: 1 / 1; }
-                    #panel-b    { grid-column: 2 / 3; grid-row: 1 / 1; }
-                    #couch      { grid-column: 1 / 2; grid-row: 2 / 4; }
-                    #cabinet    { grid-column: 2 / 3; grid-row: 2 / 3; }
-                    #headboard  { grid-column: 2 / 3; grid-row: 3 / 4; }
-
-                    .caption {
-                        bottom: 8px;
-                        font-size: 16px;
-                        left: 8px;
-                        position: absolute;
-
-                        .label { text-transform: uppercase; display: block; }
-                        .title { display: block; }
-                    }
-                }
-            }
             .email {
                 padding: 36px 0;
                 text-align: center;
@@ -285,6 +247,43 @@ body {
             margin: 0 auto;
             max-width: 1200px;
             padding: 96px 0;
+
+            h1 { padding: 12px 0; }
+            .row {
+                [class*="col-"]{ padding: 0 24px; }
+            }
+            .cta {
+                font-family: 'Roboto Condensed', sans-serif;
+                font-size: 14px;
+                padding: 6px 0;
+                position: absolute;
+                text-align: center;
+                text-transform: uppercase;
+                bottom: 0;
+                left: 0;
+                right: 0;
+
+                a {
+                    color: inherit;
+                    display: inline-block;
+                    text-decoration: none;
+                    padding: 12px 12px 12px 36px;
+                    position: relative;
+
+                    &:before {
+                        background-size: contain;
+                        content: '';
+                        display: inline-block;
+                        height: 30px;
+                        width: 30px;
+                        position: absolute;
+                        left: 4px;
+                        top: 4px;
+                    }
+                    &.view:before { background-image: url('../img/view-icon.png'); }
+                    &.customize:before { background-image: url('../img/color-icon.png'); }
+                }
+            }
 
             h1 { 
                 font-size: 44px;
@@ -339,9 +338,68 @@ body {
         display: flex;
         flex-wrap: wrap;
 
-        [class*="col-"] { box-sizing: border-box; padding: 0 40px; }
+        [class*="col-"] { box-sizing: border-box; padding: 0 24px; }
         @for $i from 1 through 12 {
             .col-#{$i} { width: percentage($i / 12); }
+        }
+    }
+
+    .palette {
+        background-color: #55504c;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight: 300;
+        margin-bottom: 24px;
+        padding-bottom: 110%; /* grid ratio */
+        position: relative;
+        width: 100%;
+
+        &.small {
+            box-sizing: border-box;
+            padding-left: 5%;
+            padding-right: 5%;
+            width: 100%;
+            
+            .grid {
+                width: 90%;
+                height: calc(100% - 92px); /* subtract h2 height */
+            }
+
+            h2 {
+                font-weight: 300;
+                margin: 0;
+                line-height: 16px;
+                padding: 16px 0 8px;
+            }
+        }
+        
+        .grid {
+            display: -ms-grid;
+            display: grid;
+            -ms-grid-columns: 2fr 1fr;
+            -ms-grid-rows: 2fr 1fr 1fr;
+            grid-template-columns: 2fr 1fr;
+            grid-template-rows: 2fr 1fr 1fr;
+            height: 100%;
+            position: absolute;
+            width: 100%;
+
+            > div { position: relative; }
+
+            .panel-a    { grid-column: 1 / 2; grid-row: 1 / 1; }
+            .panel-b    { grid-column: 2 / 3; grid-row: 1 / 1; }
+            .couch      { grid-column: 1 / 2; grid-row: 2 / 4; }
+            .cabinet    { grid-column: 2 / 3; grid-row: 2 / 3; }
+            .headboard  { grid-column: 2 / 3; grid-row: 3 / 4; }
+            
+            .caption {
+                bottom: 8px;
+                font-size: 16px;
+                left: 8px;
+                position: absolute;
+
+                .label { text-transform: uppercase; display: block; }
+                .title { display: block; }
+            }
         }
     }
 
