update headboard data

--- a/css/textures.css
+++ b/css/textures.css
@@ -142,9 +142,6 @@
 .french-roast-panel {
   background-image: url("../img/textures/panels/french-roast.jpg"); }
 
-.purple-reign-panel {
-  background-image: url("../img/textures/panels/purple-reign.jpg"); }
-
 /* headboards */
 .aubergine-headboard {
   background-image: url("../img/textures/headboards/aubergine.jpg"); }
@@ -260,8 +257,8 @@
 .lipstick-headboard {
   background-image: url("../img/textures/headboards/lipstick.jpg"); }
 
-.purple-headboard {
-  background-image: url("../img/textures/headboards/purple.jpg"); }
+.passion-purple-headboard {
+  background-image: url("../img/textures/headboards/passion-purple.jpg"); }
 
 .white-headboard {
   background-image: url("../img/textures/headboards/white.jpg"); }
