--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -31,13 +31,13 @@
 </header>
 
 <article class="home">
-    <div class="owl-carousel owl-theme palette">
+    <div class="owl-carousel owl-theme color-palette">
         <div class="group">
             <div class="headline">
                 <p>Choose from dozens of color schemes</p>
                 <em>Serengeti (pictured)</em>
             </div>
-            <div class="items">
+            <a class="items" href="index.html?create&panel-a=serengeti&panel-b=sunset-brown&couch=saddle&cabinet=mahogany&headboard=camel&scheme=serengeti">
                 <div class="item">
                     <div class="tile texture serengeti-panel"><span class="name">Serengeti</span></div>
                     <span class="category">Panel A</span>
@@ -58,14 +58,14 @@
                     <div class="tile texture camel-headboard"><span class="name">Camel</span></div>
                     <span class="category">Headboard</span>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="group">
             <div class="headline">
                 <p>Choose from dozens of color schemes</p>
                 <em>Black Hole (pictured)</em>
             </div>
-            <div class="items">
+            <a class="items" href="index.html?create&panel-a=black-hole&panel-b=carbon&couch=chocolate&cabinet=charcoal&headboard=aubergine">
                 <div class="item">
                     <div class="tile texture black-hole-panel"><span class="name">Black Hole</span></div>
                     <span class="category">Panel A</span>
@@ -86,14 +86,14 @@
                     <div class="tile texture aubergine-headboard"><span class="name">Aubergine</span></div>
                     <span class="category">Headboard</span>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="group">
             <div class="headline">
                 <p>Choose from dozens of color schemes</p>
                 <em>Graphite (pictured)</em>
             </div>
-            <div class="items">
+            <a class="items" href="index.html?create&panel-a=graphite-reign&panel-b=carbon-black&couch=slate&cabinet=charcoal&headboard=ultraviolet">
                 <div class="item">
                     <div class="tile texture graphite-reign-panel"><span class="name">Graphite Reign</span></div>
                     <span class="category">Panel A</span>
@@ -114,7 +114,7 @@
                     <div class="tile texture ultraviolet-headboard"><span class="name">Ultraviolet</span></div>
                     <span class="category">Headboard</span>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
     <div class="cta">
