--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -172,25 +172,27 @@ body {
     text-align: center;
     margin-top: -128px;
     overflow: hidden; }
-    body article.home .owl-carousel.palette {
+    body article.home .owl-carousel.color-palette {
       margin: auto;
       max-width: 960px; }
-      body article.home .owl-carousel.palette .headline {
+      body article.home .owl-carousel.color-palette .headline {
         padding: 12px 0;
         position: relative;
         z-index: 1;
         width: 100%; }
-        body article.home .owl-carousel.palette .headline p {
+        body article.home .owl-carousel.color-palette .headline p {
           font-size: 18px;
           margin: 0; }
-        body article.home .owl-carousel.palette .headline em {
+        body article.home .owl-carousel.color-palette .headline em {
           font-size: 12px; }
-      body article.home .owl-carousel.palette .items {
-        display: flex; }
-        body article.home .owl-carousel.palette .items .item {
+      body article.home .owl-carousel.color-palette .items {
+        display: flex;
+        text-decoration: none;
+        color: inherit; }
+        body article.home .owl-carousel.color-palette .items .item {
           padding: 2%;
           width: 20%; }
-          body article.home .owl-carousel.palette .items .item .tile {
+          body article.home .owl-carousel.color-palette .items .item .tile {
             align-items: center;
             border-radius: 7px;
             box-shadow: 0 0 8px #1d1a18;
@@ -199,28 +201,28 @@ body {
             justify-content: center;
             margin: auto;
             width: 100%; }
-            body article.home .owl-carousel.palette .items .item .tile .name {
+            body article.home .owl-carousel.color-palette .items .item .tile .name {
               font-size: 16px; }
-          body article.home .owl-carousel.palette .items .item .category {
+          body article.home .owl-carousel.color-palette .items .item .category {
             display: block;
             font-size: 12px;
             padding: 16px 0;
             text-transform: uppercase; }
-      body article.home .owl-carousel.palette .owl-nav {
+      body article.home .owl-carousel.color-palette .owl-nav {
         position: absolute;
         bottom: calc(60% - 36px);
         width: calc(120%);
         left: -10%; }
-        body article.home .owl-carousel.palette .owl-nav button {
+        body article.home .owl-carousel.color-palette .owl-nav button {
           color: transparent;
           height: 48px;
           opacity: 0.8;
           position: absolute;
           width: 16px; }
-          body article.home .owl-carousel.palette .owl-nav button.owl-prev {
+          body article.home .owl-carousel.color-palette .owl-nav button.owl-prev {
             left: 12px;
             background-image: url("../img/left-arrow.svg"); }
-          body article.home .owl-carousel.palette .owl-nav button.owl-next {
+          body article.home .owl-carousel.color-palette .owl-nav button.owl-next {
             right: 12px;
             background-image: url("../img/right-arrow.svg"); }
     body article.home .cta {
@@ -468,9 +470,9 @@ body {
     max-width: 30%; }
   body article.home {
     padding: 0 10%; }
-    body article.home .owl-carousel.palette .items .item .tile .name {
+    body article.home .owl-carousel.color-palette .items .item .tile .name {
       display: none; }
-    body article.home .owl-carousel.palette .items .item .category {
+    body article.home .owl-carousel.color-palette .items .item .category {
       display: none; }
   body .row [class*="col-"] {
     width: 100%; } }
