add scheme details

--- a/css/textures.css
+++ b/css/textures.css
@@ -79,8 +79,8 @@
 .carbon-black-panel {
   background-image: url("../img/textures/panels/carbon-black.jpg"); }
 
-.linnen-sail-panel {
-  background-image: url("../img/textures/panels/linnen-sail.jpg"); }
+.linen-sail-panel {
+  background-image: url("../img/textures/panels/linen-sail.jpg"); }
 
 .stainless-twist-panel {
   background-image: url("../img/textures/panels/stainless-twist.jpg"); }
@@ -305,8 +305,8 @@
 .chocolate-headboard {
   background-image: url("../img/textures/headboards/chocolate.jpg"); }
 
-.fawn-headboard {
-  background-image: url("../img/textures/headboards/fawn.jpg"); }
+.faun-headboard {
+  background-image: url("../img/textures/headboards/faun.jpg"); }
 
 .navy-headboard {
   background-image: url("../img/textures/headboards/navy.jpg"); }
@@ -345,11 +345,11 @@
 .off-the-grid-couch {
   background-image: url("../img/textures/couches/off-the-grid.jpg"); }
 
-.brixk-couch {
-  background-image: url("../img/textures/couches/brixk.jpg"); }
+.brick-couch {
+  background-image: url("../img/textures/couches/brick.jpg"); }
 
-.clowd-couch {
-  background-image: url("../img/textures/couches/clowd.jpg"); }
+.cloud-couch {
+  background-image: url("../img/textures/couches/cloud.jpg"); }
 
 .optical-white-couch {
   background-image: url("../img/textures/couches/optical-white.jpg"); }
@@ -369,14 +369,14 @@
 .deer-run-couch {
   background-image: url("../img/textures/couches/deer-run.jpg"); }
 
-.rasberry-elmanordic-III-couch {
-  background-image: url("../img/textures/couches/rasberry-elmanordic-III.jpg"); }
+.raspberry-couch {
+  background-image: url("../img/textures/couches/raspberry.jpg"); }
 
 .brooklyn-fog-couch {
   background-image: url("../img/textures/couches/brooklyn-fog.jpg"); }
 
-.elmanordic-III-couch {
-  background-image: url("../img/textures/couches/elmanordic-III.jpg"); }
+.purple-elmanordic-couch {
+  background-image: url("../img/textures/couches/purple-elmanordic.jpg"); }
 
 .regent-modern-gray-couch {
   background-image: url("../img/textures/couches/regent-modern-gray.jpg"); }
@@ -405,8 +405,8 @@
 .holiday-lace-couch {
   background-image: url("../img/textures/couches/holiday-lace.jpg"); }
 
-.samca-ivory-couch {
-  background-image: url("../img/textures/couches/samca-ivory.jpg"); }
+.ivory-couch {
+  background-image: url("../img/textures/couches/ivory.jpg"); }
 
 .cetus-nuvolo-couch {
   background-image: url("../img/textures/couches/cetus-nuvolo.jpg"); }
@@ -451,8 +451,8 @@
 .almond-cabinet {
   background-image: url("../img/textures/cabinets/almond.jpg"); }
 
-.cordoba-pint-cabinet {
-  background-image: url("../img/textures/cabinets/cordoba-pint.jpg"); }
+.cordoba-pine-cabinet {
+  background-image: url("../img/textures/cabinets/cordoba-pine.jpg"); }
 
 .silver-frost-cabinet {
   background-image: url("../img/textures/cabinets/silver-frost.jpg"); }
