add condition for missing assets

--- a/css/textures.css
+++ b/css/textures.css
@@ -121,8 +121,8 @@
 .twisted-steel-panel {
   background-image: url("../img/textures/panels/twisted-steel.jpg"); }
 
-.dune-panel {
-  background-image: url("../img/textures/panels/dune.jpg"); }
+.sand-dune-panel {
+  background-image: url("../img/textures/panels/sand-dune.jpg"); }
 
 .pewter-rain-panel {
   background-image: url("../img/textures/panels/pewter-rain.jpg"); }
