update raspberry data

--- a/includes/page-create.html
+++ b/includes/page-create.html
@@ -14,31 +14,31 @@
                     <div class="panel-a">
                         <div class="caption">
                             <span class="label">panel a</span>
-                            <span class="title">undefined</span>
+                            <span class="title">error</span>
                         </div>
                     </div>
                     <div class="panel-b">
                         <div class="caption">
                             <span class="label">panel b</span>
-                            <span class="title">undefined</span>
+                            <span class="title">error</span>
                         </div>
                     </div>
                     <div class="couch">
                         <div class="caption">
                             <span class="label">couch</span>
-                            <span class="title">undefined</span>
+                            <span class="title">error</span>
                         </div>
                     </div>
                     <div class="cabinet">
                         <div class="caption">
                             <span class="label">cabinet interior</span>
-                            <span class="title">undefined</span>
+                            <span class="title">error</span>
                         </div>
                     </div>
                     <div class="headboard">
                         <div class="caption">
                             <span class="label">headboard</span>
-                            <span class="title">undefined</span>
+                            <span class="title">error</span>
                         </div>
                     </div>
                 </div>
