--- a/includes/page-create-controls.html
+++ b/includes/page-create-controls.html
@@ -7,10 +7,6 @@
         <a href="#" id="cabinet-option"></a>
         <a href="#" id="headboard-option"></a>
     </div>
-    <div class="options">
-        <div id="panels-options" class="owl-carousel"></div>
-        <div id="couch-option" class="owl-carousel"></div>
-        <div id="cabinet-option-options" class="owl-carousel"></div>
-        <div id="headboard-options" class="owl-carousel"></div>
-    </div>
+    <div class="carousels"></div>
+    <div class="options"></div>
 </aside>
