--- a/includes/page-create-controls.html
+++ b/includes/page-create-controls.html
@@ -1,12 +1,15 @@
 <aside class="controls">
     <div class="label"><span class="icon"></span> Customize this color scheme</div>
     <div class="categories">
-        <a href="#" id="panel-a-option"></a>
-        <a href="#" id="panel-b-option"></a>
-        <a href="#" id="couch-option"></a>
-        <a href="#" id="cabinet-option"></a>
-        <a href="#" id="headboard-option"></a>
+        <a href="#" id="panel-a-option" for="panels-options"></a>
+        <a href="#" id="panel-b-option" for="panels-options"></a>
+        <a href="#" id="couch-option" for="couches-options"></a>
+        <a href="#" id="cabinet-option" for="cabinets-options"></a>
+        <a href="#" id="headboard-option" for="headboards-options"></a>
     </div>
     <div class="carousels"></div>
-    <div class="options"></div>
+    <div class="options">
+        <a id="cancel-option" href="#"><img src="/img/cancel-icon.png" /></a>
+        <a id="accept-option" href="#"><img src="/img/accept-icon.png" /></a>
+    </div>
 </aside>
