--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -357,9 +357,21 @@ body {
             grid-template-columns: 1fr 1fr;
             padding: 10%; }
             body aside.controls .carousels .owl-carousel .item .thumb {
-              padding: 4%; }
+              padding: 4%;
+              color: inherit;
+              text-decoration: none; }
+              body aside.controls .carousels .owl-carousel .item .thumb[data-selected="true"] .image:before {
+                content: '';
+                display: block;
+                background-image: url("../img/selected.png");
+                position: absolute;
+                width: 34px;
+                height: 34px;
+                top: calc(50% - 17px);
+                left: calc(50% - 17px); }
               body aside.controls .carousels .owl-carousel .item .thumb .image {
-                padding-bottom: 90%; }
+                padding-bottom: 90%;
+                position: relative; }
               body aside.controls .carousels .owl-carousel .item .thumb .text {
                 text-align: center;
                 padding: 8px 0 0;
